--- a/IosImgFlip/IosImgFlip/Base.lproj/Main.storyboard
+++ b/IosImgFlip/IosImgFlip/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -81,37 +81,86 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U7F-7Z-5CA">
                                 <rect key="frame" x="0.0" y="44" width="414" height="448"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rLS-1f-7hX">
-                                <rect key="frame" x="30" y="522" width="354" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SbA-vf-95D">
-                                <rect key="frame" x="30" y="522" width="354" height="24"/>
+                                <rect key="frame" x="30" y="507" width="354" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeS-YU-tjY">
+                                <rect key="frame" x="30" y="546" width="354" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VC7-G5-4Ka">
+                                <rect key="frame" x="30" y="577" width="354" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V42-wk-N4k">
+                                <rect key="frame" x="30" y="641" width="354" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tCF-qt-inD">
+                                <rect key="frame" x="30" y="672" width="354" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uv8-hn-rxv">
+                                <rect key="frame" x="0.0" y="832" width="414" height="30"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="GENERATE">
+                                    <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onButtonPressed:" destination="OjW-Gc-Y8m" eventType="touchUpInside" id="GhZ-eR-aiz"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EN6-FR-iUJ">
+                                <rect key="frame" x="0.0" y="51" width="414" height="448"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="SeS-YU-tjY" secondAttribute="trailing" constant="30" id="0VB-A2-24n"/>
+                            <constraint firstItem="tCF-qt-inD" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="1Ix-eY-oqN"/>
+                            <constraint firstItem="SbA-vf-95D" firstAttribute="top" secondItem="EN6-FR-iUJ" secondAttribute="bottom" constant="8" symbolic="YES" id="4EC-Rm-ovr"/>
                             <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="U7F-7Z-5CA" secondAttribute="trailing" id="4g6-WM-ABS"/>
-                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="rLS-1f-7hX" secondAttribute="trailing" constant="30" id="4pJ-k1-t8P"/>
+                            <constraint firstItem="tCF-qt-inD" firstAttribute="top" secondItem="V42-wk-N4k" secondAttribute="bottom" constant="10" id="AYw-ve-cFC"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="Uv8-hn-rxv" secondAttribute="trailing" id="B0A-iC-8LQ"/>
                             <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="SbA-vf-95D" secondAttribute="trailing" constant="30" id="DG8-s5-OG6"/>
+                            <constraint firstItem="SeS-YU-tjY" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="Gvj-cg-jRS"/>
+                            <constraint firstItem="EN6-FR-iUJ" firstAttribute="width" secondItem="U7F-7Z-5CA" secondAttribute="width" id="IOD-MQ-5cS"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="VC7-G5-4Ka" secondAttribute="trailing" constant="30" id="Jep-aW-Veh"/>
                             <constraint firstItem="U7F-7Z-5CA" firstAttribute="height" secondItem="d8O-yP-dnB" secondAttribute="height" multiplier="0.5" id="Kig-W4-nCJ"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="V42-wk-N4k" secondAttribute="trailing" constant="30" id="QCY-gl-2zb"/>
+                            <constraint firstItem="Uv8-hn-rxv" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" id="Tld-cf-a23"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="EN6-FR-iUJ" secondAttribute="trailing" id="U5N-Kh-InX"/>
+                            <constraint firstItem="VC7-G5-4Ka" firstAttribute="top" secondItem="SeS-YU-tjY" secondAttribute="bottom" constant="10" id="XAJ-6N-0af"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="bottom" secondItem="Uv8-hn-rxv" secondAttribute="bottom" id="Zoh-Tl-8Rm"/>
+                            <constraint firstItem="V42-wk-N4k" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="ZvS-D8-oiP"/>
                             <constraint firstItem="SbA-vf-95D" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="a3K-Pu-Jo3"/>
+                            <constraint firstItem="EN6-FR-iUJ" firstAttribute="height" secondItem="U7F-7Z-5CA" secondAttribute="height" id="avN-y7-gfm"/>
                             <constraint firstItem="U7F-7Z-5CA" firstAttribute="top" secondItem="XJv-Vs-hUA" secondAttribute="top" id="cTs-KD-Vb2"/>
-                            <constraint firstItem="rLS-1f-7hX" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="iyt-Tn-cTD"/>
+                            <constraint firstItem="SeS-YU-tjY" firstAttribute="top" secondItem="SbA-vf-95D" secondAttribute="bottom" constant="15" id="dC2-eP-C13"/>
                             <constraint firstItem="U7F-7Z-5CA" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" id="ktq-I8-bCm"/>
-                            <constraint firstItem="SbA-vf-95D" firstAttribute="top" secondItem="U7F-7Z-5CA" secondAttribute="bottom" constant="30" id="rpV-At-cm8"/>
-                            <constraint firstItem="rLS-1f-7hX" firstAttribute="top" secondItem="U7F-7Z-5CA" secondAttribute="bottom" constant="30" id="vPG-Xr-pSQ"/>
+                            <constraint firstItem="VC7-G5-4Ka" firstAttribute="leading" secondItem="XJv-Vs-hUA" secondAttribute="leading" constant="30" id="kxk-OJ-ia4"/>
+                            <constraint firstItem="SbA-vf-95D" firstAttribute="top" secondItem="U7F-7Z-5CA" secondAttribute="bottom" constant="15" id="rpV-At-cm8"/>
+                            <constraint firstItem="XJv-Vs-hUA" firstAttribute="trailing" secondItem="tCF-qt-inD" secondAttribute="trailing" constant="30" id="rt8-t1-ue0"/>
+                            <constraint firstItem="V42-wk-N4k" firstAttribute="top" secondItem="VC7-G5-4Ka" secondAttribute="bottom" constant="30" id="wEt-8n-xTU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XJv-Vs-hUA"/>
                     </view>
                     <connections>
+                        <outlet property="firstText" destination="VC7-G5-4Ka" id="roJ-6i-iXu"/>
+                        <outlet property="foregroundImageLoader" destination="EN6-FR-iUJ" id="aDm-GX-hTH"/>
                         <outlet property="image" destination="U7F-7Z-5CA" id="2ig-iC-VdW"/>
                         <outlet property="name" destination="SbA-vf-95D" id="XMD-kS-GSg"/>
+                        <outlet property="secondText" destination="tCF-qt-inD" id="bkv-3P-OdK"/>
+                        <outlet property="validateButton" destination="Uv8-hn-rxv" id="OQe-VQ-LZY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Tn-2Q-InL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
