--- a/IosImgFlip/IosImgFlip/Base.lproj/Main.storyboard
+++ b/IosImgFlip/IosImgFlip/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DKL-CQ-bJ1">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="100" width="414" height="762"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="100" id="Fgq-pT-1Lw">
@@ -52,17 +53,25 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="S3y-2k-kDv">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="M9U-ag-fjj"/>
-                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="W4q-Jj-Aj6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DKL-CQ-bJ1" secondAttribute="trailing" id="aO1-bo-lOE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DKL-CQ-bJ1" secondAttribute="bottom" id="skM-wJ-WSQ"/>
+                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="top" secondItem="S3y-2k-kDv" secondAttribute="bottom" symbolic="YES" id="Aaq-HN-V7G"/>
+                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="CDc-c7-aNc"/>
+                            <constraint firstItem="S3y-2k-kDv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="COS-bz-UZW"/>
+                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="GIf-fJ-Yx2"/>
+                            <constraint firstItem="S3y-2k-kDv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LKb-C8-d4U"/>
+                            <constraint firstItem="DKL-CQ-bJ1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lur-cY-oe4"/>
+                            <constraint firstItem="S3y-2k-kDv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zc1-pb-kbC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="searchBar" destination="S3y-2k-kDv" id="nb6-40-0La"/>
                         <outlet property="tableView" destination="DKL-CQ-bJ1" id="10k-YG-qEL"/>
                     </connections>
                 </viewController>
@@ -166,6 +175,65 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Tn-2Q-InL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="873.88392857142856"/>
+        </scene>
+        <!--Grid View Meme View Controller-->
+        <scene sceneID="kVh-nD-PoY">
+            <objects>
+                <collectionViewController id="YdT-LD-J1l" customClass="GridViewMemeViewController" customModule="IosImgFlip" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="cwa-zJ-0d3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0tw-az-Hab">
+                            <size key="itemSize" width="72" height="163"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="q6S-KH-8iU">
+                                <rect key="frame" x="0.0" y="0.0" width="72" height="163"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dCo-En-hsi">
+                                    <rect key="frame" x="0.0" y="0.0" width="72" height="163"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X6N-wH-qW3">
+                                            <rect key="frame" x="0.0" y="0.0" width="72" height="114"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncv-qJ-0gp">
+                                            <rect key="frame" x="20" y="122.00000000000001" width="32" height="40.666666666666671"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ncv-qJ-0gp" firstAttribute="leading" secondItem="dCo-En-hsi" secondAttribute="leading" constant="20" symbolic="YES" id="6K3-Ew-EMV"/>
+                                        <constraint firstItem="X6N-wH-qW3" firstAttribute="height" secondItem="dCo-En-hsi" secondAttribute="height" multiplier="0.699387" id="BJX-Rw-6PK"/>
+                                        <constraint firstAttribute="trailing" secondItem="ncv-qJ-0gp" secondAttribute="trailing" constant="20" symbolic="YES" id="VXZ-Cq-kgl"/>
+                                        <constraint firstItem="X6N-wH-qW3" firstAttribute="top" secondItem="dCo-En-hsi" secondAttribute="top" id="Xd2-Fs-Eq4"/>
+                                        <constraint firstItem="X6N-wH-qW3" firstAttribute="leading" secondItem="dCo-En-hsi" secondAttribute="leading" id="qRO-1m-80u"/>
+                                        <constraint firstItem="ncv-qJ-0gp" firstAttribute="top" secondItem="X6N-wH-qW3" secondAttribute="bottom" constant="8" symbolic="YES" id="uM7-Ce-Xbd"/>
+                                        <constraint firstAttribute="trailing" secondItem="X6N-wH-qW3" secondAttribute="trailing" id="zhF-pO-0s1"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="72" height="163"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="YdT-LD-J1l" id="SXE-Ul-7gf"/>
+                            <outlet property="delegate" destination="YdT-LD-J1l" id="Mju-Et-YfK"/>
+                        </connections>
+                    </collectionView>
+                    <connections>
+                        <outlet property="gridView" destination="cwa-zJ-0d3" id="KyV-C8-xRm"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7QD-Y8-EI1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1627.536231884058" y="140.625"/>
         </scene>
     </scenes>
 </document>
